/*
 * Teragrep Buffer Library for Java
 * Copyright (C) 2026 Suomen Kanuuna Oy
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 *
 *
 * Additional permission under GNU Affero General Public License version 3
 * section 7
 *
 * If you modify this Program, or any covered work, by linking or combining it
 * with other code, such other code is not for that reason alone subject to any
 * of the requirements of the GNU Affero GPL version 3 as long as this Program
 * is the same Program as licensed from Suomen Kanuuna Oy without any additional
 * modifications.
 *
 * Supplemented terms under GNU Affero General Public License version 3
 * section 7
 *
 * Origin of the software must be attributed to Suomen Kanuuna Oy. Any modified
 * versions must be marked as "Modified version of" The Program.
 *
 * Names of the licensors and authors may not be used for publicity purposes.
 *
 * No rights are granted for use of trade names, trademarks, or service marks
 * which are in The Program if any.
 *
 * Licensee must indemnify licensors and authors for any liability that these
 * contractual assumptions impose on licensors and authors.
 *
 * To the extent this program is licensed as part of the Commercial versions of
 * Teragrep, the applicable Commercial License may apply to this file if you as
 * a licensee so wish it.
 */
package com.teragrep.buf_01.buffer.lease;

import com.teragrep.buf_01.buffer.container.MemorySegmentContainer;
import com.teragrep.buf_01.buffer.container.MemorySegmentContainerImpl;
import com.teragrep.poj_01.pool.Pool;

import java.lang.foreign.MemorySegment;
import java.util.Objects;
import java.util.concurrent.Phaser;

// spotless:off
/**
 * @class MemorySegmentLease
 * @brief Decorator for {@link MemorySegmentContainer} that zeroes the encapsulated {@link MemorySegment} on
 *        {@link #close()}. Starts with one initial reference. Internally uses a {@link NonTerminatingPhaser} to track
 *        reference count in a non-blocking way.
 * @responsibilities
 * - Reference tracking
 * - Provides access to encapsulated MemorySegment
 * - Zero references removes access to MemorySegment
 * - Fills MemorySegment with zeroes (0) on close
 * @collaborators
 * - Lease
 * - Pool
 * - MemorySegmentSubLease
 * @startuml
 * interface Pool
 * class MemorySegmentLease {
 * + sliceAt(offset);
 * + id();
 * + refs();
 * + leasedObject();
 * + hasZeroRefs();
 * + isStub();
 * + close();
 * }
 * MemorySegmentLease --> MemorySegmentSubLease : slices into
 * MemorySegmentLease --> Pool : returned into
 * note right of MemorySegmentLease
 * Responsibilities:
 * - Reference tracking
 * - Provides access to encapsulated MemorySegment - Zero references removes access to MemorySegment
 * - Fills MemorySegment with zeroes (0) on close
 * Collaborators:
 * - Lease
 * - Pool
 * - MemorySegmentSubLease
 * end note
 * @enduml
 */
// spotless:on
public final class MemorySegmentLease implements OpenableLease<MemorySegment> {

    private final MemorySegmentContainer memorySegmentContainer;
    private final Phaser phaser;
    private final Pool<OpenableLease<MemorySegment>> pool;

    public MemorySegmentLease(MemorySegmentContainer bc, Pool<OpenableLease<MemorySegment>> pool) {
        this.memorySegmentContainer = bc;
        // initial registered parties set to 0, to be opened with open() before using
        this.phaser = new NonTerminatingPhaser(0);
        this.pool = pool;
    }

    @Override
    public Lease<MemorySegment> sliceAt(final long offset) {
        return new MemorySegmentSubLease(
                new MemorySegmentContainerImpl(
                        memorySegmentContainer.id(),
                        memorySegmentContainer.memorySegment().asSlice(offset)
                ),
                phaser
        );
    }

    @Override
    public long id() {
        return memorySegmentContainer.id();
    }

    @Override
    public long refs() {
        // initial number of registered parties is 1
        return phaser.getRegisteredParties();
    }

    @Override
    public MemorySegment leasedObject() {
        if (phaser.getRegisteredParties() == 0) {
            throw new IllegalStateException(
                    "Cannot return wrapped MemorySegment, MemorySegmentLease phaser was already terminated!"
            );
        }
        return memorySegmentContainer.memorySegment();
    }

    @Override
    public boolean hasZeroRefs() {
        return phaser.getRegisteredParties() == 0;
    }

    @Override
    public boolean isStub() {
        return memorySegmentContainer.isStub();
    }

    @Override
    public void close() {
        if (phaser.getParent() == null && phaser.getRegisteredParties() == 1) {
            leasedObject().fill((byte) 0);
        }
        else {
            throw new IllegalStateException(
                    "Cannot close lease, has <" + phaser.getRegisteredParties() + "> references."
            );
        }

        if (phaser.arriveAndDeregister() < 0) {
            throw new IllegalStateException("Cannot close lease, MemorySegmentLease phaser was already terminated!");
        }

        pool.offer(this);
    }

    @Override
    public boolean equals(final Object o) {
        if (o == null || getClass() != o.getClass()) {
            return false;
        }
        final MemorySegmentLease that = (MemorySegmentLease) o;
        return Objects.equals(memorySegmentContainer, that.memorySegmentContainer)
                && Objects.equals(phaser, that.phaser) && Objects.equals(pool, that.pool);
    }

    @Override
    public int hashCode() {
        return Objects.hash(memorySegmentContainer, phaser, pool);
    }

    @Override
    public void open() {
        if (phaser.getRegisteredParties() == 0) {
            phaser.register();
        }
        else {
            throw new IllegalStateException("Cannot re-open an open lease!");
        }
    }

    @Override
    public String toString() {
        return "MemorySegmentLease{" + "memorySegmentContainer=" + memorySegmentContainer + ", phaser=" + phaser
                + ", pool=" + pool + '}';
    }
}
